# django-dynamic-tables

./: pyproject.toml
restapi/dynamictables/: apps.py  urls.py  views.py
restapi/dynamictables/tests/: test_dybamic_tables_viewset.py  test_model.py
restapi/restapi/: settings.py  urls.py
